@@ -1,0 +1,2 @@
+prog: pth_term_signal
+vgopts: -q
